# prost-reflect

./: CHANGELOG.md  README.md  README.tpl  generate-readme.ps1
.github/workflows/: ci.yml
doc/: derive.md
prost-reflect/: Cargo.toml
prost-reflect-build/: Cargo.toml
prost-reflect-conformance-tests/: Cargo.toml
prost-reflect-derive/: Cargo.toml
prost-reflect-tests/: Cargo.toml
prost-reflect-tests/src/: desc.rs  lib.rs
prost-reflect/src/: lib.rs
prost-reflect/src/descriptor/: mod.rs  service.rs
prost-reflect/src/descriptor/ty/: mod.rs
prost-reflect/src/dynamic/: fields.rs  message.rs  mod.rs
prost-reflect/src/dynamic/serde/: mod.rs
prost-reflect/src/dynamic/serde/de/: kind.rs  mod.rs  wkt.rs
prost-reflect/src/dynamic/serde/ser/: mod.rs  wkt.rs
prost-reflect/src/dynamic/text_format/: mod.rs
