[package]
name = "prost-reflect-tests"
description = "Tests for prost-reflect."
version = "0.0.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
publish = false
build = "build.rs"

[lib]
doctest = false

[[bench]]
name = "decode"
harness = false

[dependencies]
once_cell = "1.9.0"
prost = { git = "https://github.com/tokio-rs/prost", branch = "master" }
prost-reflect = { path = "../prost-reflect", features = [
    "serde",
    "derive",
    "reflect-well-known-types"
] }
prost-types = { git = "https://github.com/tokio-rs/prost", branch = "master" }

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
serde_json = { version = "1.0.73", features = ["float_roundtrip"] }
serde = "1.0.132"
criterion = "0.3.5"

[build-dependencies]
prost-reflect-build = { path = "../prost-reflect-build" }
prost-build = { git = "https://github.com/tokio-rs/prost", branch = "master" }

[package.metadata.release]
release = false
